<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/activity_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/headtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helptxt" />

        <TextView
            android:id="@+id/htextv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/headtxt"
            android:layout_marginTop="10dp"
            android:text="@string/htxt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/htextv"
            android:layout_centerVertical="true"
            android:text="@string/btxt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/ftxt"
            android:textAlignment="center" />
    </RelativeLayout>
</ScrollView>
